README: Added demo URL.

--- a/README
+++ b/README
@@ -21,6 +21,7 @@ Documentation:: http://blackwinter.github.com/ontopia-topicmaps
 Source code::   http://github.com/blackwinter/ontopia-topicmaps
 RubyGem::       http://rubygems.org/gems/ontopia-topicmaps
 Ontopia::       http://ontopia.net/
+Demo::          http://ixtrieve.fh-koeln.de/ghn
 
 
 == AUTHORS
