--- a/README
+++ b/README
@@ -14,6 +14,12 @@ cannot be found automatically). Note, though, that's it not required to run the
 application server, only the JAR files are needed.
 
 
+== SUPPORTED PLATFORMS
+
+Ontopia::Topicmaps requires JRuby[http://jruby.org]. It has been tested with
+jruby 1.7.4 (1.9.3p392) on OpenJDK 64-Bit Server VM 1.6.0_27-b27 [linux-amd64].
+
+
 == LINKS
 
 <b></b>
