--- a/README
+++ b/README
@@ -22,10 +22,9 @@ jruby 1.7.4 (1.9.3p392) on OpenJDK 64-Bit Server VM 1.6.0_27-b27 [linux-amd64].
 
 == LINKS
 
-<b></b>
-Documentation:: http://blackwinter.github.com/ontopia-topicmaps
-Source code::   http://github.com/blackwinter/ontopia-topicmaps
-RubyGem::       http://rubygems.org/gems/ontopia-topicmaps
+Documentation:: https://blackwinter.github.io/ontopia-topicmaps/
+Source code::   https://github.com/blackwinter/ontopia-topicmaps
+RubyGem::       https://rubygems.org/gems/ontopia-topicmaps
 Ontopia::       http://ontopia.net/
 Demo::          http://ixtrieve.fh-koeln.de/ghn
 
