--- a/README
+++ b/README
@@ -19,14 +19,17 @@ Ontopia application server, only the JAR files are needed.
 Ontopia::Topicmaps requires JRuby[http://jruby.org]. It has been tested with
 jruby 1.7.4 (1.9.3p392) on OpenJDK 64-Bit Server VM 1.6.0_45-b06 [linux-amd64].
 
+Ontopia versions 5.2.2 and 5.3.0 are known to work with Ontopia::Topicmaps.
+
 
 == LINKS
 
+Ontopia::       http://ontopia.net/
+Demo::          http://ixtrieve.fh-koeln.de/ghn
 Documentation:: https://blackwinter.github.io/ontopia-topicmaps/
 Source code::   https://github.com/blackwinter/ontopia-topicmaps
 RubyGem::       https://rubygems.org/gems/ontopia-topicmaps
-Ontopia::       http://ontopia.net/
-Demo::          http://ixtrieve.fh-koeln.de/ghn
+Travis CI::     https://travis-ci.org/blackwinter/ontopia-topicmaps
 
 
 == AUTHORS
